examples/tests/typed_builtin_errors.ore
/*
    Stage E.3.5b — builtin error cases. Each top-level decl below
    should produce exactly one diagnostic.
*/

// error: @sizeOf expects 1 argument, got 0
no_arg :: @sizeOf()

// error: @sizeOf expects 1 argument, got 2
too_many :: @sizeOf(i32, u8)

// error: @intCast target must be an integer type
bad_cast_target :: fn() -> bool
    @intCast(bool, 5)

// error: @intCast operand must be an integer
bad_cast_operand :: fn() -> i32
    @intCast(i32, "hi")

// error: unknown builtin
unknown :: @notAThing(i32)
